Adicionando campo de whatsapp no banco de dados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "mapbox",
         "react",
         "react app mapbox token",
-        "token"
+        "token",
+        "whatsapp"
     ]
 }
