--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "@types/yup": "^0.29.8",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
@@ -20,6 +21,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
+    "nodemailer-express-handlebars": "^4.0.0",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
